# quickchart-python

./: .gitignore  .travis.yml  CHANGELOG.md  README.md  __init__.py  pyproject.toml  quickchart.py  tests.py
.github/workflows/: ci.yml
examples/: discord_bot.py  gradient_fill.py  short_url_example.py  short_url_example_with_function.py  simple_example.py  simple_example_with_function.py  using_quickchartfunction.py  write_file.py
quickchart/: __init__.py
scripts/: format.sh
