[tool.poetry]
name = "quickchart.io"
version = "0.1.3"
description = "A client for quickchart.io, a service that generates static chart images"
keywords = ["chart api", "chart image", "charts"]
authors = ["Ian Webster <ianw_pypi@ianww.com>"]
maintainers = ["Ian Webster <ianw_pypi@ianww.com>"]
homepage = "https://quickchart.io/"
readme = "README.md"
repository = "https://github.com/typpo/quickchart-python"
license = "MIT"
packages = [
    { include = "quickchart" },
]

[tool.poetry.dependencies]
python = ">=2.7, !=3.0.*, !=3.1.*, !=3.2.*, !=3.3.*, !=3.4.*"
requests = "^2.23.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
