[tool.poetry]
name = "quickchart.io"
version = "2.0.0"
description = "A client for quickchart.io, a service that generates static chart images"
keywords = ["chart api", "chart image", "charts"]
authors = ["Ian Webster <ianw_pypi@ianww.com>"]
maintainers = ["Ian Webster <ianw_pypi@ianww.com>"]
homepage = "https://quickchart.io/"
readme = "README.md"
repository = "https://github.com/typpo/quickchart-python"
license = "MIT"
packages = [
    { include = "quickchart" },
]

[tool.poetry.dependencies]
python = ">=3.7, <4"
requests = "^2.28.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.5"

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
